src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPQ_AMER__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox indicates if a Product is available in the AMER region.</inlineHelpText>
        <label>AMER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_APAC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox indicates if a Product is available in the APAC region.</inlineHelpText>
        <label>APAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Claim_Bundle_Product__c</fullName>
        <formula>IF(OR(Contains(Product__r.Product__c ,&quot;Claim Portal for Agents&quot;),Contains(Product__r.Product__c ,&quot;Claim Portal for Policyholders&quot;)),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Bundle Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox indicates if a Product is available in the EMEA region.</inlineHelpText>
        <label>EMEA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Exponent_Factor__c</fullName>
        <inlineHelpText>Product Exponent Factor is used in conjunction with DWP and Product Factors as appropriate to calculate the price of this Product.</inlineHelpText>
        <label>CPQ Exponent Factor</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Not_Eligible_for_Suite_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Eligible for Suite Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Optional_Support_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Optional Support Plan</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Optional Support Plan)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_6_Commercial_Factor__c</fullName>
        <inlineHelpText>Used in conjunction with Commercial %, Personal Factor and Personal % to derive a blended factor. Blended factor is used in price calculation for Products priced with Model #6.</inlineHelpText>
        <label>CPQ Price Method #6 Commercial Factor</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_6_Personal_Factor__c</fullName>
        <inlineHelpText>Used in conjunction with Personal %, Commercial Factor and Commercial % to derive a blended factor. Blended factor is used in price calculation for Products priced with Model #6.</inlineHelpText>
        <label>CPQ Price Method #6 Personal Factor</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_1_End__c</fullName>
        <label>CPQ Price Method #7 Range 1 End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_1_Exponent__c</fullName>
        <inlineHelpText>Used in conjunction with Pricing Model #7 only. Model #7 uses specific Product Factors and Exponent Factors dependant on the DWP. Displays the Exponent to be used when DWP is less than Range 1 End. (Typically $1B but can be different depending on Product)</inlineHelpText>
        <label>CPQ Price Method #7 Range 1 Exponent</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_1_Factor__c</fullName>
        <inlineHelpText>Used in conjunction with Pricing Model #7 only. Model #7 uses specific Product Factors and Exponent Factors dependant on the DWP. Displays the Factor to be used when DWP is less than Range 1 End. (Typically $1B but can be different depending on Product)</inlineHelpText>
        <label>CPQ Price Method #7 Range 1 Factor</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_1_Start__c</fullName>
        <inlineHelpText>Displays the DWP that defines &quot;Range 1 Start&quot; for all Products priced with Pricing Model #7.</inlineHelpText>
        <label>CPQ Price Method #7 Range 1 Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_2_End__c</fullName>
        <label>CPQ Price Method #7 Range 2 End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_2_Exponent__c</fullName>
        <inlineHelpText>Used in conjunction with Pricing Model #7 only. Model #7 uses specific Product Factors and Exponent Factors dependant on the DWP. Displays the Exponent to be used when DWP is less than Range 2 End. (Typically $1B but can be different depending on Product)</inlineHelpText>
        <label>CPQ Price Method #7 Range 2 Exponent</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_2_Factor__c</fullName>
        <inlineHelpText>Used in conjunction with Pricing Model #7 only. Model #7 uses specific Product Factors and Exponent Factors dependant on the DWP. Displays the Factor to be used when DWP is less than Range 2 End. (Typically $1B but can be different depending on Product)</inlineHelpText>
        <label>CPQ Price Method #7 Range 2 Factor</label>
        <precision>13</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Method_7_Range_2_Start__c</fullName>
        <label>CPQ Price Method #7 Range 2 Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Minimum_1__c</fullName>
        <inlineHelpText>Identifies the Price Minimum for this Product. If Product is Quoted for less than this Price, an Approval Process will be triggered. Majority of Products use only one Price Minimum.</inlineHelpText>
        <label>CPQ Price Minimum</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Minimum_2__c</fullName>
        <inlineHelpText>Identifies the Price Minimum for this Product. If Product is Quoted for less than this Price, an Approval Process will be triggered. Majority of Products use only one Price Minimum.</inlineHelpText>
        <label>CPQ Price Minimum #2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Price_Minimum__c</fullName>
        <formula>IF(ISBLANK( CPQ_Price_Minimum_1__c ),
   IF (ISBLANK( CPQ_Price_Minimum_2__c ),
       0,
       CPQ_Price_Minimum_2__c
   ),
   IF (ISBLANK( CPQ_Price_Minimum_2__c ),
       CPQ_Price_Minimum_1__c,
       IF (CPQ_Price_Minimum_1__c &lt; CPQ_Price_Minimum_2__c,
           CPQ_Price_Minimum_1__c,
           CPQ_Price_Minimum_2__c
       )
   )
)</formula>
        <label>Price Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Pricing_Method__c</fullName>
        <inlineHelpText>Dictates the Pricing Model used when calculating the Price for this Product. See Price Rules for specific calculation information for Products. (Requires appropriate permissions)</inlineHelpText>
        <label>CPQ Pricing Method</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Factor__c</fullName>
        <inlineHelpText>Product Factor is used in conjunction with DWP and Exponent Factors as appropriate to calculate the price of this Product.</inlineHelpText>
        <label>CPQ Product Factor</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Group_Name__c</fullName>
        <formula>TEXT( Product__r.Product_Group_Name__c  )</formula>
        <inlineHelpText>Displays the Product Group Name of the Product related to this SKU.</inlineHelpText>
        <label>Product Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Line_Name__c</fullName>
        <formula>TEXT(Product__r.Product_line_Name__c)</formula>
        <inlineHelpText>Displays the Product Line Name of the Product related to this SKU.</inlineHelpText>
        <label>Product Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Product_Set_Name__c</fullName>
        <formula>TEXT( Product__r.Product_Set_Name__c )</formula>
        <inlineHelpText>Displays the Product Set Name of the Product related to this SKU.</inlineHelpText>
        <label>CPQ Product Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Data_Migration_Prod_Name__c</fullName>
        <label>Data Migration Prod Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_Number_of_Solution_Owners__c</fullName>
        <formula>CASE( CS_Support_Type__c , 
        &apos;Standard&apos;, 5, 
        &apos;Premium&apos;, 10,
        &apos;Gold&apos;, 5,
        &apos;Platinum&apos;, 10,
        0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Solution Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_SaaS_Url__c</fullName>
        <description>***** Service Cloud SaaS URL ******</description>
        <label>SaaS Download Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CS_Serial_Number__c</fullName>
        <description>**** Service Cloud  Serial Number  for  Rating Management,ReInsurance, BFO,SAP Production,****</description>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Support_Type__c</fullName>
        <label>Support Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWP_in_M_Less_Than__c</fullName>
        <label>DWP &lt; (in M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWP_in_M__c</fullName>
        <label>DWP &gt;= (in M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Price_Minimum__c</fullName>
        <description>Used in Price Rule and WFR for Minimum Pricing</description>
        <label>Has Price Minimum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incl_in_Maint_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>test</description>
        <label>Incl in Maint Premium_Not Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incl_in_Maint_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>test</description>
        <label>Incl in Maint Standard-Not Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mule_Response_Status__c</fullName>
        <label>Mule Response Status</label>
        <picklist>
            <picklistValues>
                <fullName>success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Mitchell_line_of_business__c</fullName>
        <label>Mitchell line of business</label>
        <picklist>
            <picklistValues>
                <fullName>APD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Product_Type__c</fullName>
        <label>PRM Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Related_Primary_Products__c</fullName>
        <label>Related Primary Products</label>
        <picklist>
            <picklistValues>
                <fullName>WorkCenter Triage/Appraisal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartAdvisor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Revenue_Sharing_Rate_del__c</fullName>
        <label>Revenue Sharing Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <label>Product Group Code</label>
        <picklist>
            <controllingField>Product_Group_Name__c</controllingField>
            <picklistValues>
                <fullName>ADDONX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLNCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-INSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLBRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRVX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group_Name__c</fullName>
        <label>Product Group Name</label>
        <picklist>
            <controllingField>Product_line_Name__c</controllingField>
            <picklistValues>
                <fullName>Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Add Ons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard-based Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting Management</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Integration_Status__c</fullName>
        <label>Product Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eligible for Product setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration in Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Internal_Description__c</fullName>
        <label>Product Internal Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <label>Product Line Code</label>
        <picklist>
            <controllingField>Product_line_Name__c</controllingField>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Long_Name__c</fullName>
        <label>Product Long Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ref__c</fullName>
        <externalId>true</externalId>
        <label>Product-Ref</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Set_Code__c</fullName>
        <label>Product Set Code</label>
        <picklist>
            <controllingField>Product_Set_Name__c</controllingField>
            <picklistValues>
                <fullName>ACC-PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC-PH (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC(LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC (MP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI-INS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI-UM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT(LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-SBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC (MP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLMCNV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMP+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP (LNG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP-AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP-PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP-SBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP-VD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR-SBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Set_Name__c</fullName>
        <label>Product Set Name</label>
        <picklist>
            <controllingField>Product_line_Name__c</controllingField>
            <picklistValues>
                <fullName>Account Management Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Management Portal Language Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliances (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppReader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Template Language Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter Language Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter Localized Layer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter Market Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence for InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence for Underwriting Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catastrophe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter Language Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter Localized Layer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter Market Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Agents Language Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContactManager Language Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management Bundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud monitoring Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Portal for Agents</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name__c</fullName>
        <label>Product Short Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Source__c</fullName>
        <label>Product Source</label>
        <picklist>
            <picklistValues>
                <fullName>In-house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Resell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market layer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension/Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>equals</operation>
                <value>Standard Products</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_line_Name__c</fullName>
        <label>Product Line Name</label>
        <picklist>
            <picklistValues>
                <fullName>Core processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data and Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevRec_Template__c</fullName>
        <label>RevRec Template</label>
        <picklist>
            <picklistValues>
                <fullName>Exact Days Period Prorate day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Upfront Recognition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
        <description>Indicates how assets representing this product behave on amendments.</description>
        <inlineHelpText>Select a behavior when amending assets representing this product. By default, asset quantities cannot decrease unless an upgrade is added, and no refund is applied.</inlineHelpText>
        <label>Asset Amendment Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Allow Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetConversion__c</fullName>
        <description>Determines how this product is converted to asset.</description>
        <inlineHelpText>Indicates how this product is converted to asset.</inlineHelpText>
        <label>Asset Conversion</label>
        <picklist>
            <picklistValues>
                <fullName>One per quote line</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>One per unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
        <inlineHelpText>Non-blank value designates this product is sold in batches. Enter quantity in each batch. Quantity entered in quote will be divided by this value and rounded up to the nearest integer.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <globalPicklist>SBQQ__BillingFrequency</globalPicklist>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
    </fields>
</CustomObject>